force-app/main/default/objects/VendaServico__c/VendaServico__c.object-meta.xml
<CustomObject>
    <description>Objeto de junção para vincular Vendas do Conta Azul a múltiplos Serviços.</description>
    <label>Venda do Serviço</label>
    <nameField>
        <displayFormat>VS-{00000}</displayFormat>
        <label>Nome da Venda do Serviço</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vendas dos Serviços</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>