force-app/main/default/objects/VendaServico__c/fields/Servico__c.field-meta.xml
<CustomField>
    <fullName>Servico__c</fullName>
    <label>Serviço</label>
    <referenceTo>Servico__c</referenceTo>
    <relationshipLabel>Vendas Vinculadas</relationshipLabel>
    <relationshipName>VendasVinculadas</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>