force-app/main/default/objects/VendaServico__c/fields/ValorAlocado__c.field-meta.xml
<CustomField>
    <fullName>ValorAlocado__c</fullName>
    <description>Valor da venda destinado a este serviço específico.</description>
    <label>Valor Alocado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>