force-app/main/default/objects/VendaServico__c/fields/Venda__c.field-meta.xml
<CustomField>
    <fullName>Venda__c</fullName>
    <label>Venda Conta Azul</label>
    <referenceTo>VendaContaAzul__c</referenceTo>
    <relationshipLabel>Serviços Vinculados</relationshipLabel>
    <relationshipName>ServicosVinculados</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>